# wildebeest-chess-ai

./: .gitignore  README.md  ai.py  board.py  compile  constants.py  effects.py  moves.py  pyproject.toml  run  run.py  utils.py
docs/: rules.md
src/wildebeest/: __init__.py  __main__.py  ai.py  board.py  constants.py  effects.py  moves.py  run.py  utils.py
tests/: conftest.py  test_ai.py  test_board.py  test_effects.py  test_moves.py  test_perft.py
